crates/toml_edit/tests/snapshots/invalid/float/inf-incomplete-01.stderr
TOML parse error at line 1, column 21
  |
1 | inf-incomplete-01 = in
  |                     ^^
invalid float, expected `inf`
